<resources>
    <string name="app_name">Codemanager</string>

    <!--main navigation : topappbar / bottomnavigationview / drawerlayout-->
    <string name="main_navigation_page_title">UzamangBiz</string>

    <!--code manager-->
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="code_manager_title">코드관리</string>
    <string name="code_manager_detail_title">상세 코드관리</string> <!--실제로는 해당 페이지의 key를 받아서 해당 페이지에 맞는 이름이 타이틀로 떠야함.-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="codemanager_create_toolbar_title">프로젝트 생성</string>
    <string name="codemanager_detail_toolbar_title">프로젝트 세부 사항</string>

    <!--Project recyclerView-->
    <string name="project_category">project_category</string>
    <string name="project_name">project_name</string>
    <string name="project_task_name">업무 이력 제목</string>
    <string name="project_task_writer">업무 이력 작성자</string>
    <string name="project_task_write_date">업무 이력 작성일</string>

    <!--drawer Layout-->
    <string name="start">Start</string>
    <string name="close">Close</string>

    <!--login-->
    <string name="ujamang_company_id">회사 아이디</string>
    <string name="ujamang_id">아이디</string>
    <string name="ujamang_password">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="ujamang_title">유자망 BIZ</string>
    <string name="login_password_error">비밀번호 오류</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--공지사항-->
    <string name="notice_title">공지사항</string>
</resources>