<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/project_task_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_task_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/project_task_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/project_task_writer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/project_task_write_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_task_write_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

    <!--더보기 버튼 sheet bottom 으로 넘어가는 버튼을 만들 예정이다.-->